[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "twitch_thumbnails"
version = "0.1.0"
description = "Helper for concatenating twitch thumbnails"
authors = [
    { email="w531t4@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "requests",
    "Pillow",
    "appdaemon>=4.0.0"
]